# smart-warehouse-agv-path-planner

./: .gitignore  README.md  智能仓储机器人路径规划系统_实验报告.md
backend/: app.py  requirements.txt
backend/tests/: test_backend.py
cpp_core/: .gitignore  CMakeLists.txt
cpp_core/data/: cbs-crossing-map.json  no-path-map.json
cpp_core/include/: ConflictBasedSearch.hpp  PathResult.hpp  Point.hpp  SearchPlanner.hpp
cpp_core/src/: ConflictBasedSearch.cpp  GridMap.cpp  JsonAdapter.cpp  SearchPlanner.cpp  main.cpp
cpp_core/tests/: core-tests.cpp
deploy/: agv-path-planner.service  sync-deploy.sh
docs/: DESIGN.md  core-algorithms.md  decision-log.md  智能仓储机器人路径规划系统_代码实现Plan.md
frontend/: index.html  package-lock.json  package.json
frontend/public/models/: ASSET_SOURCES.md
frontend/src/: App.tsx  Scene3D.tsx  api.ts  grid-utils.ts  styles.css  types.ts
frontend/tests/: app.test.tsx  grid-utils.test.ts
scripts/: check.sh
submission/: README.md  打开线上演示.html  打开线上演示.url
submission/backend/: __init__.py  planner_client.py  requirements.txt  schemas.py
submission/backend/tests/: __init__.py  test_backend.py
submission/cpp_core/: CMakeLists.txt
submission/cpp_core/data/: no-path-map.json  sample-map.json
submission/cpp_core/include/: GridMap.hpp  JsonAdapter.hpp  PathResult.hpp
submission/cpp_core/src/: ConflictBasedSearch.cpp  GridMap.cpp
submission/frontend/: package.json  tsconfig.app.json
submission/frontend/public/models/: agv.glb  obstacle.glb  rack.glb
submission/frontend/src/: api.ts
submission/scripts/: dev.sh
